fix: repair production bugs surfaced by the failing-test cleanup
Real bugs found behind previously-broken tests:
- UrlDetector: rewrite URL regex with flat character classes (nested
  quantifiers caused StackOverflowError on long URLs); normalize via
  java.net.URI so file:/// is preserved and sftp:// stops being discarded
  (URL.toURI mangles both); case-insensitive scheme guard so HTTP:// URLs
  are not double-prefixed; support protocol-less bare domains; detect
  tiktok @user/video URLs
- FolderMonitorServiceImpl: standalone scanFolder() was a silent no-op
  (isMonitoring gate) and never emitted onFileAdded, so pre-existing
  torrents in a watched folder were never queued at startup; fix
  double-notify of onFileProcessingError from executeFileAction
- FolderMonitorSettings: null-safe setters; base default extensions
  narrowed to torrent-only (Metalink monitor adds its own)
- TorrentFolderMonitor: fail-fast null validation of constructor args
- YtDlpClient.extractInfo: parse the first JSON line instead of the whole
  merged stdout, so yt-dlp WARNING lines no longer break metadata
  extraction
- HttrackSettings: emit real httrack flags (%e1 external travel, -A rate,
  per-extension include/exclude filters, additional options); depth and
  connections validation; null-safe setters; graceful null output dir
- ProxychainsConfig: hasAuthentication requires both user and password
  (prevents writing a literal null password to the config)
- DownloadException: CANCELLED is no longer classified recoverable (was
  feeding auto-retry of user cancellations); null error codes pass
  through instead of silently becoming GENERAL_ERROR
- ChecksumValidationAction: honor cancel() requested before execute();
  description shows 15 checksum chars
- AfterCompletionActionManager: execute actions concurrently (allOf join,
  single onAllActionsComplete) with a common-pool fallback after shutdown
- ClipboardEvent: toString renders null content as 'null'

Test fixes: deterministic MockWe